add testing gift

--- a/src/GiftsGranter/appsettings.json
+++ b/src/GiftsGranter/appsettings.json
@@ -11,7 +11,7 @@
     "refreshToken": "",
     "clientAuth": "ulearn_achievements:secret"
   },
-  "courses": [ "complexity" ],
+  "courses": [ "complexity", "testing" ],
   "complexity": {
     "maxScore": 32,
     "masterScore": 32,
@@ -21,5 +21,15 @@
     "message": "Вот-вот продукты Контура будут активно использовать в каждой организации страны, поэтому в их коде нет места неэффективным алгоритмам. [Курс по оценке сложности алгоритмов](https://ulearn.me/Course/complexity?kontur=true) на ulearn.me поможет писать только быстрый код :)",
     "giftImagePath": "3PLk3n/achivement.png",
     "subtitle": "{0} из {1} в онлайн-курсе по оценке сложности — это вам не хухры-мухры!"
+  },
+  "testing": {
+    "maxScore": 127,
+    "masterScore": 120,
+    "passScore": 95,
+    "masterTitle": "Мастерски пройден курс «Тестирование ПО»!",
+    "passTitle": "Пройден курс «Тестирование ПО»",
+    "message": "Большой [курс по тестированию ПО](https://ulearn.me/Course/Testing/Vvedenie_5656d8a3-1269-4834-bdfe-8fbc1f1c8f30?kontur=true) на ulearn.me дает базовые знания о тестировании программ, знакомит с процессом и инструментами разработки",
+    "giftImagePath": "IxQzKM/ачивка2-03%20%282%29.png",
+    "subtitle": "{0} из {1} возможных баллов"
   }
 }
