--- a/src/GiftsGranter/appsettings.json
+++ b/src/GiftsGranter/appsettings.json
@@ -30,6 +30,6 @@
     "passTitle": "Пройден курс «Тестирование ПО»",
     "message": "Большой [курс по тестированию ПО](https://ulearn.me/Course/Testing/Vvedenie_5656d8a3-1269-4834-bdfe-8fbc1f1c8f30?kontur=true) на ulearn.me дает базовые знания о тестировании программ, знакомит с процессом и инструментами разработки",
     "giftImagePath": "IxQzKM/ачивка2-03%20%282%29.png",
-    "subtitle": "{0} из {1} возможных баллов"
+    "subtitle": "{0} из {1}"
   }
 }
