--- a/src/GiftsGranter/packages.config
+++ b/src/GiftsGranter/packages.config
@@ -47,6 +47,7 @@
   <package id="System.Memory" version="4.5.1" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net47" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net47" />
@@ -81,5 +82,5 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
-  <package id="Telegram.Bot" version="13.2.1" targetFramework="net47" />
+  <package id="Telegram.Bot" version="14.6.0" targetFramework="net47" />
 </packages>
