--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -106,6 +106,9 @@
   },
   "proxy": "https://localhost:44300",
   "devDependencies": {
-    "@types/file-saver": "^1.3.0"
+    "@types/file-saver": "^1.3.0",
+    "@types/react": "^16.4.6",
+    "less": "^3.5.2",
+    "less-loader": "^4.1.0"
   }
 }
