--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@skbkontur/react-ui": "^0.11.0",
+    "array-from": "^2.1.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -50,6 +51,7 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
+    "url-polyfill": "^1.0.13",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
