Mentor gift settings

--- a/src/GiftsGranter/appsettings.json
+++ b/src/GiftsGranter/appsettings.json
@@ -11,7 +11,7 @@
     "refreshToken": "",
     "clientAuth": "ulearn_achievements:secret"
   },
-  "courses": [ "complexity", "testing" ],
+  "courses": [ "complexity", "testing", "mentor" ],
   "complexity": {
     "maxScore": 32,
     "masterScore": 32,
@@ -31,5 +31,15 @@
     "message": "Большой [курс по тестированию ПО](https://ulearn.me/Course/Testing/Vvedenie_5656d8a3-1269-4834-bdfe-8fbc1f1c8f30?kontur=true) на ulearn.me дает базовые знания о тестировании программ, знакомит с процессом и инструментами разработки",
     "giftImagePath": "IxQzKM/ачивка2-03%20%282%29.png",
     "subtitle": "{0} из {1}"
+  },
+  "mentor": {
+    "maxScore": 10,
+    "masterScore": 8,
+    "passScore": 6,
+    "masterTitle": "Мастерски пройден курс «Наставничество в разработке»!",
+    "passTitle": "Пройден курс «Наставничество в разработке»",
+    "message": "Наставничество дело тонкое. По неопытности легко насовершать глупых ошибок и даже не понять этого. Опытные наставники собрали советы и частные ошибки в текстовом курсе-методичке [«Наставничество в разработке»](https://ulearn.me/Course/mentor?kontur=true) на ulearn.me. Он поможет подготовиться к появлению новичков в команде.",
+    "giftImagePath": "fij691gs/ачивка%2001.png",
+   "subtitle": "{0} из {1} за решение кейсов по наставничеству в онлайн-курсе"
   }
 }
