Allow only 1 submission to be requested by runcsjob
It's needed to optimize database requests for fetching submissions

--- a/.gitignore
+++ b/.gitignore
@@ -194,6 +194,7 @@ private.settings
 # Exercises projects zips
 *.exercise.zip
 /src/uLearn.Web/App_Data/error*.xml
+/src/uLearn.Web/static/
 
 # Rider and WebStorm files
 .idea/
