--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -9,11 +9,10 @@
     </connectionStrings>
 	<appSettings>
 		<!-- Url to Ulearn.Web instance. I.E. https://ulearn.me -->
-		<add key="submissionsUrl" value="http://localhost:3000/" />
+		<add key="submissionsUrl" value="https://localhost:44300/" />
 		<!-- Must be equal on Ulearn.Web and RunCsJob instance -->
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
 		<add key="sleepSeconds" value="1" />
-		<add key="jobsToRequest" value="5" />
 		<add key="ulearn.runcsjob.threadsCount" value="1" />
 		<!-- By default agentName is computer name -->
 		<add key="ulearn.runcsjob.agentName" value="" />
