Read cors options in Web.API and api endpoint from in react application from json files [2]

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -28,6 +28,12 @@
     "web": {
         "cookieKeyRingDirectory": "../cookie_protection_keys/",
         "cookieName": "ulearn.auth",
-        "cookieDomain": "localhost"
+        "cookieDomain": "localhost",
+        "cookieSecure": false,
+        "cors": {
+            "allowOrigins": [
+                "http://localhost:3000", "https://localhost:44300"
+            ]
+        }
     }
 }
