Show certificates list on /Account/Manage page
2-column layout for this page

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1302,6 +1302,7 @@
     <Content Include="tablesorter-master\test.html" />
     <Content Include="Views\Admin\StyleValidations.cshtml" />
     <Content Include="Views\AntiPlagiarism\Details.cshtml" />
+    <Content Include="Views\Certificates\ListPartial.cshtml" />
     <Content Include="Views\Errors\404.cshtml" />
     <Content Include="Views\Errors\Error.cshtml" />
     <Content Include="Views\Exercise\StudentSubmissions.cshtml" />
