Insert frontend configuration into index.html

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -35,5 +35,10 @@
                 "http://localhost:3000", "https://localhost:44300"
             ]
         }
+    },
+    "frontend": {
+        "api": {
+            "endpoint": "http://localhost:8000/"
+        }
     }
 }
