--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -17,5 +17,10 @@
         "cookieName": "ulearn.auth",
         "cookieDomain": "localhost",
         "cookieSecure": "false"
+    },
+    "frontend": {
+        "api": {
+            "endpoint": "http://localhost:8000/"
+        }
     }
 }
