Add CourseId to UserQuizzesRepo

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -703,6 +703,10 @@
     <Compile Include="Migrations\201807242045133_AddCourseIdToSlideHintIndex.Designer.cs">
       <DependentUpon>201807242045133_AddCourseIdToSlideHintIndex.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807242056303_AddCourseIdToUserQuzzesIndex.cs" />
+    <Compile Include="Migrations\201807242056303_AddCourseIdToUserQuzzesIndex.Designer.cs">
+      <DependentUpon>201807242056303_AddCourseIdToUserQuzzesIndex.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -1089,6 +1093,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807242045133_AddCourseIdToSlideHintIndex.resx">
       <DependentUpon>201807242045133_AddCourseIdToSlideHintIndex.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807242056303_AddCourseIdToUserQuzzesIndex.resx">
+      <DependentUpon>201807242056303_AddCourseIdToUserQuzzesIndex.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
