JWT token authentication for Web.Api
Show account problems in react'ed header
Common api module for making requests
Fix bug with updating page after logouting
Show icons instead of menus in mobile header

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -34,6 +34,14 @@
             "allowOrigins": [
                 "http://localhost:3000", "https://localhost:44300"
             ]
+        },
+        "authentication": {
+            "jwt": {
+                "issuer": "ulearn.me",
+                "audience": "ulearn.me",
+                "issuerSigningKey": "issuerSigningKey",
+                "lifeTimeHours": 24
+            }
         }
     },
     "frontend": {
