+ video-annotations to slides add course.exe command to patch them from googleDocs document add course settings for googledocs document for video annotations

--- a/src/CourseTool/CourseTool.csproj
+++ b/src/CourseTool/CourseTool.csproj
@@ -362,6 +362,7 @@
   <ItemGroup>
     <Compile Include="CmdLineOptions\AbstractOptions.cs" />
     <Compile Include="ArchiveManager.cs" />
+    <Compile Include="CmdLineOptions\PatchSlidesWithVideoAnnotations.cs" />
     <Compile Include="Validating\BaseValidator.cs" />
     <Compile Include="CmdLineOptions\OlxDesquashChaptersOptions.cs" />
     <Compile Include="CmdLineOptions\OlxGcOptions.cs" />
