--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1057,6 +1057,8 @@
     <Content Include="Content\404.jpg" />
     <Content Include="Content\antiplagiarism.css" />
     <Content Include="Content\awesome-bootstrap-checkbox.css" />
+		<Content Include="Content\banner-campus.png" />
+		<Content Include="Content\banner-summer-practice.png" />
     <Content Include="Content\bootstrap-select.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -1077,8 +1079,7 @@
     <Content Include="Content\logo.png" />
     <Content Include="Content\modals.css" />
     <Content Include="Content\notifications.css" />
-    <Content Include="Content\stepik.css" />
-    <Content Include="Content\summer-practice.png" />
+    <Content Include="Content\stepik.css" />    
     <Content Include="Content\tablesorter.css" />
     <Content Include="Content\ulearn.css" />
     <Content Include="favicon.ico" />
