--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -47,6 +47,7 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.Build" version="15.8.166" targetFramework="net47" />
   <package id="Microsoft.Build.Framework" version="15.8.166" targetFramework="net47" />
   <package id="Microsoft.Build.Utilities.Core" version="15.8.166" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis" version="2.8.2" targetFramework="net47" />
@@ -180,6 +181,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.5.24" targetFramework="net47" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net47" />
