--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -111,8 +111,10 @@
     "@babel/preset-env": "^7.1.0",
     "@types/file-saver": "^1.3.0",
     "@types/react": "^16.4.15",
+    "html-webpack-plugin": "next",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "html-webpack-plugin": "next"
+    "mini-css-extract-plugin": "^0.4.3",
+    "uglifyjs-webpack-plugin": "latest"
   }
 }
