Remove CORS headers in Release

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -225,7 +225,7 @@
 		<remove name="X-AspNet-Version"/>
 		  
 		<!-- CORS -->
-		<add name="Access-Control-Allow-Origin" value="http://localhost:3000 https://ulearn.me" />
+		<add name="Access-Control-Allow-Origin" value="http://localhost:3000" />
 		<add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS"/>
 	  </customHeaders>		
 	</httpProtocol>
