--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -62,7 +62,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+		"storybook": "start-storybook -p 9001 -c .storybook"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -108,6 +109,7 @@
   },
   "proxy": "https://localhost:44300",
   "devDependencies": {
+    "@storybook/react": "^3.4.11",
     "@types/file-saver": "^1.3.0",
     "@types/react": "^16.4.6",
     "less": "^3.5.2",
