Antiplagiarism: max faint and strong suspicion levels
+ some refactoring

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -21,7 +21,9 @@
             "faintSuspicionCoefficient": 4,
             "strongSuspicionCoefficient": 7,
             "minFaintSuspicionLevel": 0.25,
-            "minStrongSuspicionLevel": 0.4
+            "minStrongSuspicionLevel": 0.4,
+            "maxFaintSuspicionLevel": 0.90,
+            "maxStrongSuspicionLevel": 0.98
         },
         "plagiarismDetector": {
             "countOfColdestSnippetsUsedToFirstSearch": 100,
