--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -9,7 +9,8 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "@skbkontur/react-ui": "^0.20.0",
+    "@skbkontur/react-icons": "^3.1.1",
+    "@skbkontur/react-ui": "^0.28.0",
     "array-from": "^2.1.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
