--- a/src/Core.Tests/Core.Tests.csproj
+++ b/src/Core.Tests/Core.Tests.csproj
@@ -30,6 +30,9 @@
 			<Content Include="Courses\Units\TestData\**\*">
 				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			</Content>
+			<Content Include="Courses\ScoringGroups\TestData\**\*">
+				<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			</Content>			
     </ItemGroup>
 
 </Project>
