Add XSD schema to web server in /schema/v2(.xsd)

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -215,6 +215,11 @@
           </conditions>
           <action type="Redirect" redirectType="Found" url="https://ulearn.me/{R:1}"/>
         </rule>
+
+				<rule name="Rewrite url to XSD-schema" stopProcessing="true">
+					<match url="^schema/v2(\.xsd)?$" />
+					<action type="Rewrite" url="/schema.xsd" redirectType="Permanent" />
+				</rule>
       </rules>
     </rewrite>
 
