Changed invite block. Added copy to clipboard and toast.

--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -82,6 +82,7 @@
     "less": "^3.5.2",
     "less-loader": "^4.1.0",
     "moment": "^2.22.2",
-    "moment-timezone": "^0.5.23"
+    "moment-timezone": "^0.5.23",
+    "react-copy-to-clipboard": "^5.0.1"
   }
 }
