CourseLoadingContext, SlideLoadingContext and SlideBuildingContext
+ don't validate input on /Admin/Packages, because error is passed via query string
+ truncate filenames in error message while course load, show only part from archive

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -144,7 +144,7 @@
         <add assembly="RunCsJob.Api"/>
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.7" maxRequestLength="16000000" enableVersionHeader="false"/>
+    <httpRuntime targetFramework="4.7" maxRequestLength="16000000" enableVersionHeader="false" maxUrlLength="2048"/>
     <globalization culture="ru-RU" uiCulture="ru" fileEncoding="utf-8" responseEncoding="utf-8"/>
     <httpModules>
       <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web"/>      
