--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -9,15 +9,15 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "@skbkontur/react-icons": "^3.1.1",
-    "@skbkontur/react-ui": "^0.30.0",
-    "array-from": "^2.1.1",
+    "@skbkontur/react-icons": "3.1.1",
+    "@skbkontur/react-ui": "0.30.0",
+    "array-from": "2.1.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react-app": "3.1.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -25,7 +25,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-react-app": "2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -33,34 +33,34 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "file-saver": "^1.3.8",
+    "file-saver": "1.3.8",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "^23.6.0",
+    "jest": "23.6.0",
     "object-assign": "4.1.1",
-    "outdated-browser-rework": "^2.5.4",
+    "outdated-browser-rework": "2.5.4",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "latest",
     "raf": "3.4.0",
-    "react": "^16.4.1",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-bootstrap": "^0.32.1",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-yandex-metrika": "^2.3.0",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
+    "react": "16.4.1",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-bootstrap": "0.32.1",
+    "react-dev-utils": "5.0.1",
+    "react-dom": "16.4.1",
+    "react-helmet": "5.2.0",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.3.1",
+    "react-yandex-metrika": "2.3.0",
+    "redux": "4.0.0",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "url-polyfill": "^1.0.13",
+    "url-polyfill": "1.0.13",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
@@ -76,13 +76,13 @@
   },
   "proxy": "https://localhost:44300",
   "devDependencies": {
-    "@storybook/react": "^3.4.11",
-    "@types/file-saver": "^1.3.0",
-    "@types/react": "^16.4.6",
-    "less": "^3.5.2",
-    "less-loader": "^4.1.0",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.23",
-    "react-copy-to-clipboard": "^5.0.1"
+    "@storybook/react": "3.4.11",
+    "@types/file-saver": "1.3.0",
+    "@types/react": "16.4.6",
+    "less": "3.5.2",
+    "less-loader": "4.1.0",
+    "moment": "2.22.2",
+    "moment-timezone": "0.5.23",
+    "react-copy-to-clipboard": "5.0.1"
   }
 }
