LruCache has maxLifeTime
+ Remove VideoAnnotationBlock

--- a/src/VideoAnnotations.Web/appsettings.json
+++ b/src/VideoAnnotations.Web/appsettings.json
@@ -12,6 +12,10 @@
     },
 	  "videoAnnotations": {
 		    "googleDocsApiKey": "AIzaSyD2OrsI15dHkISxexd-bMQCkxRCJV8mu_c",
-			  "timeout": "00:00:10"
+			  "timeout": "00:00:10",
+			  "cache": {
+					  "capacity": 100,
+					  "maxLifeTime": "01:00:00"
+				}
 		}    
 }
