--- a/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
+++ b/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
@@ -34,6 +34,9 @@
 			<Content Update="appsettings.json">
 				<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 			</Content>
+			<Content Include="deploy\VideoAnnotations.Web.Task.xml">
+				<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+			</Content>
 		</ItemGroup>
 
     <ItemGroup>
